# OpenClaw-Pi-Dashboard

./: .env.example  .gitignore  README.md  app.py  config.json.example  install.sh  openclaw-pi-dashboard.service  pyproject.toml  requirements.txt
templates/: index.html
