[metadata]
name = "openclaw-pi-dashboard"
version = "0.1.0"
description = "A secure, real-time Raspberry Pi monitoring dashboard"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "OpenClaw", email = "openclaw@example.com"}
]
keywords = ["raspberry-pi", "dashboard", "monitoring", "flask", "sse"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "flask>=2.3.0",
    "psutil>=5.9.0",
    "gunicorn>=21.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/Ryan-W31/OpenClaw-Pi-Dashboard"
Repository = "https://github.com/Ryan-W31/OpenClaw-Pi-Dashboard"
Issues = "https://github.com/Ryan-W31/OpenClaw-Pi-Dashboard/issues"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
